# pmtool

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  SETUP_GUIDE.md  TECHNICAL_ANALYSIS.md  check_db_config.py  deploy_env.sh  package-lock.json  update_env.py  verify_db.py  verify_deployment.sh  verify_env.py
backend/: .env  .env.example  alembic.ini  check_config.py  check_db.py  check_db_config.py  check_env.py  check_openai.py  check_routes.py  check_schema.py  configure_alembic.py  create_migration.py  create_test_pdf.py  init_db.py  init_test_db.py  pyproject.toml  requirements.txt  setup.py  test_db.py  update_alembic_config.py  verify_backend.py  verify_db.py  verify_env.py  verify_metadata.py  verify_model.py
backend/alembic/: env.py
backend/alembic/versions/: 20240124_add_priority_to_tasks.py  2024_02_01_create_hint_confirmations.py  20250123210156_add_confidence_rationale_to_tasks.py  2453de19b08e_create_initial_schema.py  2453de19b08e_initial_schema.py  530e48f7382c_create_initial_schema.py  785016c52f95_create_packages_table.py  8132b26d9e88_initial_migration_with_all_models.py  b3da6d29abec_create_initial_schema.py  create_packages_table.py  ed7f10d4b070_add_hourly_rate_and_duration_to_tasks.py
backend/app/: main.py
backend/app/api/: deps.py  projects.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  init_db.py  init_test_user.py  security.py
backend/scripts/: check_users.py  create_admin.py  create_test_pdf.py  create_test_user.py  setup_db.py
backend/tests/: .env.test  conftest.py  test_pdf_analysis.py
(+208 files in other folders)
